스터디룸 페이지네이션 offset에서 cursor 기반으로 변경